<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<parent>
		<groupId>org.springframework.boot</groupId>
		<artifactId>spring-boot-starter-parent</artifactId>
		<version>4.1.1</version>
		<relativePath/>
	</parent>

	<groupId>vn.danang</groupId>
	<artifactId>polaris-parent</artifactId>
	<version>0.1.1-SNAPSHOT</version>
	<packaging>pom</packaging>
	<name>Polaris :: Parent Reactor</name>
	<description>Polaris Enterprise Assistant Backend Monorepo</description>

	<modules>
		<module>libs/polaris-common</module>
		<module>apps/polaris</module>
		<module>apps/polaris-assistant</module>
	</modules>

	<properties>
		<java.version>21</java.version>
		<polaris.version>0.1.1-SNAPSHOT</polaris.version>
		<mcp.version>2.0.1</mcp.version>
		<opentelemetry-logback.version>2.27.0-alpha</opentelemetry-logback.version>
		<springdoc.version>3.1.1</springdoc.version>
		<protobuf-java.version>4.36.1</protobuf-java.version>
		<mapstruct.version>1.6.3</mapstruct.version>
		<lombok.version>1.18.48</lombok.version>
		<lombok-mapstruct-binding.version>0.2.0</lombok-mapstruct-binding.version>
		<argLine></argLine>
	</properties>

	<dependencyManagement>
		<dependencies>
			<!-- Internal Modules -->
			<dependency>
				<groupId>vn.danang</groupId>
				<artifactId>polaris-common</artifactId>
				<version>${polaris.version}</version>
			</dependency>
			<dependency>
				<groupId>vn.danang</groupId>
				<artifactId>polaris</artifactId>
				<version>${polaris.version}</version>
			</dependency>
			<dependency>
				<groupId>vn.danang</groupId>
				<artifactId>polaris-assistant</artifactId>
				<version>${polaris.version}</version>
			</dependency>

			<!-- Third-party managed versions -->
			<dependency>
				<groupId>com.google.protobuf</groupId>
				<artifactId>protobuf-java</artifactId>
				<version>${protobuf-java.version}</version>
			</dependency>
			<dependency>
				<groupId>org.projectlombok</groupId>
				<artifactId>lombok</artifactId>
				<version>${lombok.version}</version>
			</dependency>
			<dependency>
				<groupId>org.springdoc</groupId>
				<artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
				<version>${springdoc.version}</version>
			</dependency>
			<dependency>
				<groupId>io.opentelemetry.instrumentation</groupId>
				<artifactId>opentelemetry-logback-appender-1.0</artifactId>
				<version>${opentelemetry-logback.version}</version>
			</dependency>
			<dependency>
				<groupId>io.modelcontextprotocol.sdk</groupId>
				<artifactId>mcp</artifactId>
				<version>${mcp.version}</version>
				<exclusions>
					<exclusion>
						<groupId>io.modelcontextprotocol.sdk</groupId>
						<artifactId>mcp-json-jackson3</artifactId>
					</exclusion>
				</exclusions>
			</dependency>
			<dependency>
				<groupId>io.modelcontextprotocol.sdk</groupId>
				<artifactId>mcp-json-jackson2</artifactId>
				<version>${mcp.version}</version>
			</dependency>
			<dependency>
				<groupId>org.mapstruct</groupId>
				<artifactId>mapstruct</artifactId>
				<version>${mapstruct.version}</version>
			</dependency>
			<dependency>
				<groupId>org.apache.commons</groupId>
				<artifactId>commons-text</artifactId>
				<version>1.12.0</version>
			</dependency>
		</dependencies>
	</dependencyManagement>
	<build>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<configuration>
					<annotationProcessorPaths>
						<path>
							<groupId>org.projectlombok</groupId>
							<artifactId>lombok</artifactId>
							<version>${lombok.version}</version>
						</path>
						<path>
							<groupId>org.projectlombok</groupId>
							<artifactId>lombok-mapstruct-binding</artifactId>
							<version>${lombok-mapstruct-binding.version}</version>
						</path>
						<path>
							<groupId>org.mapstruct</groupId>
							<artifactId>mapstruct-processor</artifactId>
							<version>${mapstruct.version}</version>
						</path>
					</annotationProcessorPaths>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-dependency-plugin</artifactId>
				<executions>
					<execution>
						<goals>
							<goal>properties</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-surefire-plugin</artifactId>
				<configuration>
					<argLine>@{argLine} -javaagent:${org.mockito:mockito-core:jar}</argLine>
				</configuration>
			</plugin>
		</plugins>
	</build>
</project>
